Cycles modifier changes the shape of the F-Curve #83023

Closed
opened 2020-11-25 22:09:29 +01:00 by Lucas Boutrot · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: 2.80, 2.92.0 Alpha (hash: 8330e19cb2)
Worked: 2.73, 2.79

Short description of error
When putting a modifier "cycles" on a F-Curve created with default settings, its shape changes with rotation on the keyframes tangents.

Exact steps for others to reproduce the error
bug_anim_curves.blend

  • Open the file
  • Add a "cycles" modifier on the selected F-Curve
  • The shape changes
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: 2.80, 2.92.0 Alpha (hash: `8330e19cb2`) Worked: 2.73, 2.79 **Short description of error** When putting a modifier "cycles" on a F-Curve created with default settings, its shape changes with rotation on the keyframes tangents. **Exact steps for others to reproduce the error** [bug_anim_curves.blend](https://archive.blender.org/developer/F9375072/bug_anim_curves.blend) - Open the file - Add a "cycles" modifier on the selected F-Curve - The shape changes
Author

Added subscriber: @thornydre

Added subscriber: @thornydre

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.
Although there are many ways to get around it, the curve handle should not be affected by the modifier in that way.
I tested it on blender 2.79 and it works there.
It seems that the problem was introduced in Blender 2.80.

I can confirm the problem. Although there are many ways to get around it, the curve handle should not be affected by the modifier in that way. I tested it on blender 2.79 and it works there. It seems that the problem was introduced in Blender 2.80.

Added subscriber: @angavrilov

Added subscriber: @angavrilov

This is an intentional documented feature , intended to allow one to create an actual smooth cyclic curve using auto handles. Otherwise all keyframes on the boundary*must// be manually tweaked to achieve a smooth transition.

You could argue that 'modifiers' shouldn't do that, but curve cyclicity is a fundamental property that should not be a modifier in the first place, and originally wasn't. In a very old version of blender before modifiers it was an extrapolation type, next to Constant and Linear, and it is in effect still in the extrapolation menu.

If you really intend a discontinuous curve, enable the Use Influence option on the modifier - even if the actual influence is 1, the special handling is turned off. Or switch the handle type at the boundary to aligned.

P.S. The real bug here is that the curve doesn't turn into a straght line - it's the natural interpolation for just two points. Mathematically the handles of the first and last keyframes of a cyclic curve are the same, so probably there are more unknowns than equations and the solver becomes confused.

This is an intentional [documented feature ](https:*docs.blender.org/manual/en/dev/editors/graph_editor/fcurves/modifiers.html#trivially-cyclic-curves), intended to allow one to create an actual smooth cyclic curve using auto handles. Otherwise all keyframes on the boundary*must// be manually tweaked to achieve a smooth transition. You could argue that 'modifiers' shouldn't do that, but curve cyclicity is a fundamental property that should not be a modifier in the first place, and originally wasn't. In a very old version of blender before modifiers it was an extrapolation type, next to Constant and Linear, and it is in effect still in the extrapolation menu. If you really intend a discontinuous curve, enable the Use Influence option on the modifier - even if the actual influence is 1, the special handling is turned off. Or switch the handle type at the boundary to aligned. P.S. The real bug here is that the curve doesn't turn into a straght line - it's the natural interpolation for just two points. Mathematically the handles of the first and last keyframes of a cyclic curve are the same, so probably there are more unknowns than equations and the solver becomes confused.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This appears to be the effect of 8bdc391c54. The automatic handles attempt to keep the curve smooth, but this fails because of the discontinuity in the keyframe value at each end of the cycle. This is controlled by the handle type (set to Auto Clamped in the example) as well as the curve's Handle Smoothing setting.

image.png

Top top bottom, these are:

  • Before adding the Cycles modifier
  • After adding the Cycles modifier, with the handles still at Auto Clamped.
  • After setting the handles to Aligned, and then adding the Cycles modifier.

You could argue that this smoothing shouldn't happen when there is a discontinuity in the FCurve value, but that's not how things are implemented at the moment. Possible improvements can be discussed in the design task #54724 (Workflow improvements for creating Animation Loops).

The slight wobble you see in the curve shouldn't happen, though, which is something @angavrilov will look into (discussed this on Blender Chat).

This appears to be the effect of 8bdc391c54. The automatic handles attempt to keep the curve smooth, but this fails because of the discontinuity in the keyframe value at each end of the cycle. This is controlled by the handle type (set to Auto Clamped in the example) as well as the curve's Handle Smoothing setting. ![image.png](https://archive.blender.org/developer/F9388995/image.png) Top top bottom, these are: - Before adding the Cycles modifier - After adding the Cycles modifier, with the handles still at Auto Clamped. - After setting the handles to Aligned, and then adding the Cycles modifier. You could argue that this smoothing shouldn't happen when there is a discontinuity in the FCurve value, but that's not how things are implemented at the moment. Possible improvements can be discussed in the design task #54724 (Workflow improvements for creating Animation Loops). The slight wobble you see in the curve shouldn't happen, though, which is something @angavrilov will look into (discussed this on Blender Chat).

This issue was referenced by b3f20eed6e

This issue was referenced by b3f20eed6e85249d15724543743cb049e7991622

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Alexander Gavrilov self-assigned this 2020-11-28 13:57:41 +01:00
Author

Thanks a lot for the answers, sorry for this report, but at least it was probably not completely useless :) Cheers !

Thanks a lot for the answers, sorry for this report, but at least it was probably not completely useless :) Cheers !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83023
No description provided.