Fix T83023: incorrect shape of cyclic F-Curve with only two points.

The equation solver didn't handle the one unknown case correctly.